--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -13,7 +13,7 @@
             <input type="text" name="floating_name" id="floating_name" class="block py-2.5 px-0 w-full text-sm
               text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white
               dark:border-gray-600 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
-            <label for="floating_name" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform
+            <label for="floating_name" class="peer-focus:font-medium absolute text-sm text-subtext duration-300 transform
               -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-primary
             peer-focus:dark:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75
               peer-focus:-translate-y-6"
@@ -26,8 +26,8 @@
             <input type="email" name="floating_email" id="floating_email" class="block py-2.5 px-0 w-full text-sm
               text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white
               dark:border-gray-600 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer" placeholder=" " required />
-            <label for="floating_email" class="peer-focus:font-medium absolute text-sm text-gray-500
-            dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4
+            <label for="floating_email" class="peer-focus:font-medium absolute text-sm text-subtext
+            duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4
               rtl:peer-focus:left-auto peer-focus:text-primary-600 peer-focus:dark:text-primary peer-placeholder-shown:scale-100
               peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"
             >
@@ -36,14 +36,14 @@
           </div>
         </div>
         <div class="mb-4">
-            <label for="mensaje" class="text-sm font-medium text-gray-500">Mensaje</label>
+            <label for="mensaje" class="text-sm font-medium text-text">Mensaje</label>
             <textarea id="mensaje" name="mensaje" class="mt-1 p-2 w-full border rounded-md"></textarea>
         </div>
 
 
         
 
-        <button type="submit" class="bg-gradient-to-r from-teal-400 to-columbia-400 text-white py-2 px-4 rounded-md hover:bg-gradient-to-br">Enviar Mensaje</button>
+        <button type="submit" class="bg-gradient-to-r from-teal-400 to-blue-300 text-white py-2 px-4 rounded-md hover:bg-gradient-to-br">Enviar Mensaje</button>
     </form>
   </div>
   
