--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,20 +4,20 @@
 
 ---
 
-<header class="sticky top-0 w-full h-16 border-gray-200 bg-teal text-gray-100 dark:bg-gray-700 dark:border-gray-600 ">
-  <div class="container mx-auto flex justify-between items-center">
+<header class="sticky z-10 top-0 w-full h-16 bg-header text-gray-100">
+  <div class="flex justify-between h-full items-center">
       <!-- Logo o nombre de la aplicación -->
       <a href="/" class="flex justify-center items-center transition-all duration-300 ease-in-out hover:scale-110">
-        <img src="/LogoNB.png" class="w-16 h-auto" />
+        <img src="/LogoNB.png" class="w-12 md:w-16 h-auto" />
         <h1 class="text-xl md:text-4xl font-bold">MediSim VR</h1>
       </a>
       <!-- Barra de navegación con enlaces -->
-      <nav class="mr-5 ">
-        <ul class="inline-flex gap-5 sm:gap-2 md:gap-3 justify-center items-center">
-          <li><a href="/plans" class="hover:text-dark_primary hover:underline">Plans</a></li>
-          <li><a href="#contact" class="hover:text-dark_primary hover:underline">Contact</a></li>
-          <li><a href="/about" class="hover:text-dark_primary hover:underline">About</a></li>
-          {estado != undefined && <img src="https://via.placeholder.com/40" alt="Usuario" class="w-10 h-10 cursor-pointer rounded-full" />}
+      <nav class="mr-5 text-base sm:text-lg">
+        <ul class="inline-flex gap-2 sm:gap-3 md:gap-5 justify-center items-center">
+          <li><a href="/plans" class=" hover:underline">Plans</a></li>
+          <li><a href="/contact" class=" hover:underline">Contact</a></li>
+          <li><a href="/about" class=" hover:underline">About</a></li>
+          {estado != undefined && <img src="https://via.placeholder.com/40" alt="Usuario" class="w-8 sm:w-10 h-auto cursor-pointer rounded-full" />}
         </ul>
       </nav>
   </div>
