--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@ import Header from '../components/Header.astro';
 import Form from '../components/Form.astro';
 import Footer from '../components/Footer.astro';
 
+
+import { ViewTransitions } from 'astro:transitions';
 const { title } = Astro.props;
 
 ---
@@ -18,13 +20,13 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/cardboards.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
-	<body class="min-h-screen bg-lavender-900 text-gray-700">
+	<body class="min-h-screen bg-lavender-900 text-text">
 		<Header estado="Estudiante"/>
-		<main class="mx-3 min-h-screen">
+		
 			<slot />
-			<!--Form /-->
-		</main>
+
 		<Footer />
 		
 	</body>
