--- a/src/layouts/LayoutProf.astro
+++ b/src/layouts/LayoutProf.astro
@@ -5,6 +5,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import SideNav from '../components/SideNav.astro';
 
+import { ViewTransitions } from 'astro:transitions';
 const { title } = Astro.props;
 
 ---
@@ -18,9 +19,10 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/cardboards.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title> 
+		<ViewTransitions />
 	</head>
 	
-	<body class=" bg-gray-50 text-gray-700">
+	<body class=" bg-gray-50">
 
 		<Header estado="Estudiante"/>
 		<div class="flex gap-3 min-h-screen">
