--- a/src/pages/profesional/guides[id].astro
+++ b/src/pages/profesional/guides[id].astro
@@ -3,7 +3,7 @@
     import LayoutProf from '../../layouts/LayoutProf.astro'
 ---
 
-<LayoutProf>
+<LayoutProf title="Guias Medicas">
 
   <h1 class="text-2xl font-bold mb-4">Guias de Uso</h1>
   <h3 class="text-xl font-bold mb-3">Más utilizadas</h3>
