--- a/src/pages/profesional/guides[id].astro
+++ b/src/pages/profesional/guides[id].astro
@@ -15,15 +15,15 @@
             <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-1.jpg" alt="Neil image">
           </div>
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                Neil Sims
+            <p class="text-sm font-medium text-text truncate dark:text-white">
+                Operacion de Amputacion de una pierna
             </p>
-            <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                email@flowbite.com
+            <p class="text-sm text-subtext truncate dark:text-gray-400">
+                Dr. Martin Canovas
             </p>
           </div>
-          <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-            $320
+          <div class="inline-flex items-center text-base font-semibold text-text dark:text-white">
+            $12
           </div>
       </div>
     </li>
@@ -33,15 +33,15 @@
             <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="Neil image">
           </div>
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                Bonnie Green
+            <p class="text-sm font-medium text-text truncate dark:text-white">
+                Colocacion de una protesis de cadera
             </p>
-            <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                email@flowbite.com
+            <p class="text-sm text-gray-500 truncate dark:text-subtext">
+                Dr. Damian Santos
             </p>
           </div>
-          <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-            $3467
+          <div class="inline-flex items-center text-base font-semibold text-text dark:text-white">
+            $13
           </div>
       </div>
     </li>
@@ -51,53 +51,18 @@
             <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-2.jpg" alt="Neil image">
           </div>
           <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                Michael Gough
+            <p class="text-sm font-medium text-text truncate dark:text-white">
+                Limpieza de instrumentacion
             </p>
-            <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                email@flowbite.com
+            <p class="text-sm text-subtext truncate dark:text-gray-400">
+                Dr. Juan Perez
             </p>
           </div>
-          <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-            $67
+          <div class="inline-flex items-center text-base font-semibold text-text dark:text-white">
+            $3
           </div>
       </div>
     </li>
-    <li class="py-3 sm:py-4">
-      <div class="flex items-center space-x-4 rtl:space-x-reverse">
-          <div class="flex-shrink-0">
-            <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-5.jpg" alt="Neil image">
-          </div>
-          <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                Thomas Lean
-            </p>
-            <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                email@flowbite.com
-            </p>
-          </div>
-          <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-            $2367
-          </div>
-      </div>
-    </li>
-    <li class="pt-3 pb-0 sm:pt-4">
-      <div class="flex items-center space-x-4 rtl:space-x-reverse">
-          <div class="flex-shrink-0">
-            <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-4.jpg" alt="Neil image">
-          </div>
-          <div class="flex-1 min-w-0">
-            <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                Lana Byrd
-            </p>
-            <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                email@flowbite.com
-            </p>
-          </div>
-          <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-            $367
-          </div>
-      </div>
-    </li>
+    
   </ul>
 </LayoutProf>
