End 1st iteratio

--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -10,7 +10,7 @@
     <aside class="min-h-full pr-2 pl-3 border-r-2 bg-sideNav">
       <ul class="font-bold w-48">
         <li class="py-3 sm:py-4">
-          <a href="/profesional" class="flex items-center justify-center p-2 rounded-xl hover:bg-slate-300">
+          <a href="/" class="flex items-center justify-center p-2 rounded-xl hover:bg-slate-300">
             <div class="rounded-full overflow-hidden border-2 border-gray-200 shadow-sm">
               <img src="https://via.placeholder.com/40" alt="Usuario" class="w-10 h-10" />
             </div>
