--- a/src/pages/profesional/guides[id].astro
+++ b/src/pages/profesional/guides[id].astro
@@ -12,7 +12,7 @@
     <li class="pb-3 sm:pb-4">
       <div class="flex items-center space-x-4 rtl:space-x-reverse">
           <div class="flex-shrink-0">
-            <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-1.jpg" alt="Neil image">
+            <img class="w-8 h-8 rounded-full" src="/Uso1.webp" alt="Guia1">
           </div>
           <div class="flex-1 min-w-0">
             <p class="text-sm font-medium text-text truncate dark:text-white">
@@ -30,7 +30,7 @@
     <li class="py-3 sm:py-4">
       <div class="flex items-center space-x-4 rtl:space-x-reverse">
           <div class="flex-shrink-0">
-            <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="Neil image">
+            <img class="w-8 h-8 rounded-full" src="/Uso2.webp" alt="Guia2">
           </div>
           <div class="flex-1 min-w-0">
             <p class="text-sm font-medium text-text truncate dark:text-white">
@@ -48,7 +48,7 @@
     <li class="py-3 sm:py-4">
       <div class="flex items-center space-x-4 rtl:space-x-reverse">
           <div class="flex-shrink-0">
-            <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-2.jpg" alt="Neil image">
+            <img class="w-8 h-8 rounded-full" src="/Uso3.webp" alt="Guia 3">
           </div>
           <div class="flex-1 min-w-0">
             <p class="text-sm font-medium text-text truncate dark:text-white">
