--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@
           </ul>
       </div>
   </div>
-  <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+  <div class="w-full mx-auto max-w-screen-xl py-4 md:flex md:items-center md:justify-between">
     <span class="text-sm text-subtext sm:text-center ">© 2024 Alejandro Aceves-Raul Ferri. Casi todos los derechos reservados.
     </span>
     <ul class="flex flex-wrap items-center text-sm font-medium text-subtext ">
