--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '@fontsource/roboto-mono'
+import '@fontsource/roboto'
 
 import Header from '../components/Header.astro';
 import Form from '../components/Form.astro';
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
-	<body class="min-h-screen bg-lavender-900 text-text">
+	<body class="min-h-screen bg-lavender-900 text-text font-roboto">
 		<Header estado="Estudiante"/>
 		
 			<slot />
