--- a/src/layouts/LayoutProf.astro
+++ b/src/layouts/LayoutProf.astro
@@ -1,5 +1,5 @@
 ---
-import '@fontsource/roboto-mono'
+import '@fontsource/roboto'
 
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 		<ViewTransitions />
 	</head>
 	
-	<body class=" bg-gray-50">
+	<body class=" bg-gray-50 font-roboto">
 
 		<Header estado="Estudiante"/>
 		<div class="flex gap-3 min-h-screen">
