--- a/src/pages/plans.astro
+++ b/src/pages/plans.astro
@@ -6,19 +6,19 @@
 
     
     <main class="my-5 mx-3">
-        <h1 class="text-xl font-semibold text-blue-500">
+        <h1 class="text-xl font-semibold text-title">
             ¡Transforma tu Aprendizaje Médico con MediSim VR!
         </h1>
 
         <section class="max-w-5xl mx-auto mt-8 grid gap-8 justify-items-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
 
             <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700 flex flex-col">
-                <h5 class="mb-4 text-xl font-medium text-blue-500 dark:text-blue-300 pb-2 border-b-2 border-blue-500">Students</h5>
-                <div class="flex items-baseline text-gray-900 dark:text-white">
+                <h5 class="mb-4 text-xl font-medium text-title dark:text-blue-300 pb-2 border-b-2 border-blue-500">Students</h5>
+                <div class="flex items-baseline text-text dark:text-white">
                     <span class="text-2xl font-bold tracking-tight">Personalizado</span>
                 </div>
 
-                <ul class="list-disc list-inside space-y-5 my-2 ml-3 text-base leading-tight text-gray-700 dark:text-gray-300 ">
+                <ul class="list-disc list-inside space-y-5 my-2 ml-3 text-base leading-tight text-subtext">
                     <li>
                         <span>Licencias accesibles para cada estudiante, permitiendo un acceso completo y personalizado.</span>
                     </li>
@@ -35,15 +35,15 @@
                 <button type="button" class="mt-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-200 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex justify-center w-full text-center">Choose plan</button>
             </div>
 
-            <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700 flex flex-col">
-                <h5 class="mb-4 text-xl font-medium text-blue-500 dark:text-blue-300 pb-2 border-b-2 border-blue-500">Professional</h5>
-                <div class="flex items-baseline text-gray-900 dark:text-white">
+            <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 flex flex-col">
+                <h5 class="mb-4 text-xl font-medium text-title dark:text-blue-300 pb-2 border-b-2 border-blue-500">Professional</h5>
+                <div class="flex items-baseline text-text dark:text-white">
                     <span class="text-xl font-semibold">$</span>
                     <span class="text-2xl font-extrabold tracking-tight">19</span>
                     <span class="ms-1 text-lg font-normal text-gray-500 dark:text-gray-400">/month</span>       
                 </div>
 
-                <ul class="list-disc list-inside space-y-5 my-2 ml-3 text-base leading-tight text-gray-700 dark:text-gray-300 ">
+                <ul class="list-disc list-inside space-y-5 my-2 ml-3 text-base leading-tight text-subtext">
                     <li>
                         <span>Acceso a todos los contenidos y actualizaciones de MediSim VR.</span>
                     </li>
@@ -60,15 +60,15 @@
                 <button type="button" class="mt-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-200 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex justify-center w-full text-center">Choose plan</button>
             </div>
 
-            <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700 flex flex-col">
-                <h5 class="mb-4 text-xl font-medium text-blue-500 dark:text-blue-300 pb-2 border-b-2 border-blue-500">Patron</h5>
-                <div class="flex items-baseline text-gray-900 dark:text-white">
+            <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 flex flex-col">
+                <h5 class="mb-4 text-xl font-medium text-title dark:text-blue-300 pb-2 border-b-2 border-blue-500">Patron</h5>
+                <div class="flex items-baseline text-text dark:text-white">
                     <span class="text-xl font-semibold">$</span>
                     <span class="text-2xl font-extrabold tracking-tight">200</span>
                     <span class="ms-1 text-lg font-normal text-gray-500 dark:text-gray-400">Pago único</span>
                 </div>
 
-                <ul class="list-disc list-inside space-y-2 my-2 ml-3 text-base leading-tight text-gray-700 dark:text-gray-300 ">
+                <ul class="list-disc list-inside space-y-2 my-2 ml-3 text-base leading-tight text-subtext">
                     <li>
                         <span>Acceso de por vida a todos los contenidos y actualizaciones de MediSim VR.</span>
                     </li>
