--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 
-  const { estado } = Astro.props; 
+  const { userid, estado } = Astro.props; 
 
 ---
 
@@ -17,7 +17,11 @@
           <li><a href="/plans" class=" hover:underline">Plans</a></li>
           <li><a href="/contact" class=" hover:underline">Contact</a></li>
           <li><a href="/about" class=" hover:underline">About</a></li>
-          {estado != undefined && <img src="https://via.placeholder.com/40" alt="Usuario" class="w-8 sm:w-10 h-auto cursor-pointer rounded-full" />}
+          {estado != undefined ?
+          <li><a href=`/dashboard${userid}`> <img src="https://via.placeholder.com/40" alt="Usuario" class="w-8 sm:w-10 h-auto cursor-pointer rounded-full" /> </a></li> :
+          <li class="flex gap-2 justify-center items-center"><a href="/login" class=" hover:underline">Iniciar Sesion</a> <a href="/register" class="bg-white hover:bg-gray-100 text-text py-2 px-2 rounded-full">
+  Registrarse
+</button></a></li>}
         </ul>
       </nav>
   </div>
