--- a/src/pages/plans.astro
+++ b/src/pages/plans.astro
@@ -1,8 +1,24 @@
 ---
  import Layout from '../layouts/Layout.astro'
+
+ 
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
+let datosCookie;
+
+if (Astro.cookies.has("userData")) {
+  const cookie = Astro.cookies.get("userData")
+	if(cookie){
+		datosCookie = JSON.parse(cookie.value);
+	}
+	
+}
 ---
 
 <Layout title="Plans">
+
+    <Header estado={datosCookie ? datosCookie.type : null} userid={datosCookie ? datosCookie.userid : -1}/>
 
     
     <main class="my-5 mx-3">
@@ -89,6 +105,7 @@
 
         </section>
     </main>
+    <Footer />
 
 </Layout>
 
