--- a/src/pages/profesional/historial[id].astro
+++ b/src/pages/profesional/historial[id].astro
@@ -1,45 +1,65 @@
 ---
 
-  export const prerender = false
-
+  import Header from '../../components/Header.astro';
+  import Footer from '../../components/Footer.astro';
+  import SideNav from '../../components/SideNav.astro';
   import LayoutProf from '../../layouts/LayoutProf.astro'
+
+  let datosCookie;
+
+  if (Astro.cookies.has("userData")) {
+    const cookie = Astro.cookies.get("userData")
+    if(cookie){
+      datosCookie = JSON.parse(cookie.value);
+    }
+    
+  }
+  else{
+    return Astro.redirect('/login');
+  }
+
 ---
 
 <LayoutProf title="Historial">
-  
-  <h1 class="text-2xl font-bold mb-4">Historial de Procedimientos</h1>
-  <h3 class="text-xl font-bold mb-3">Procedimientos Recientes</h3>
+  <Header estado={datosCookie.type}/>
+		<div class="flex gap-3 min-h-screen">
+			<SideNav nombre={datosCookie.name} estado={datosCookie.type.charAt(0).toUpperCase() + datosCookie.type.slice(1)} userid={datosCookie.userid}/>
+			<main class="w-full mt-3 mx-2">
+      <h1 class="text-2xl font-bold mb-4">Historial de Procedimientos</h1>
+      <h3 class="text-xl font-bold mb-3">Procedimientos Recientes</h3>
 
-  <ul class="flex flex-col gap-3" >
-    <li>
-      <div class="flex justify-between rounded-lg hover:bg-slate-300">
-        <div class="flex gap-4 p-1">
-          <img src="https://via.placeholder.com/50" alt="Imagen de procedimiento" />
-          <div class="flex flex-col justify-between">
-            <h4 class="font-semibold text-large text-text">Rinoplastia</h4>
-            <p class="text-subtext text-sm">Fecha: 12/12/2023</p>
+      <ul class="flex flex-col gap-3" >
+        <li>
+          <div class="flex justify-between rounded-lg hover:bg-slate-300">
+            <div class="flex gap-4 p-1">
+              <img src="https://via.placeholder.com/50" alt="Imagen de procedimiento" />
+              <div class="flex flex-col justify-between">
+                <h4 class="font-semibold text-large text-text">Rinoplastia</h4>
+                <p class="text-subtext text-sm">Fecha: 12/12/2023</p>
+              </div>
+            </div>
+            <span class="mr-10 flex justify-center items-center">
+              <svg class="hover:bg-slate-400 rounded-full" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 7h-6l4 5l-4 5h6l4 -5z" /></svg>
+            </span>
           </div>
-        </div>
-        <span class="mr-10 flex justify-center items-center">
-          <svg class="hover:bg-slate-400 rounded-full" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 7h-6l4 5l-4 5h6l4 -5z" /></svg>
-        </span>
-      </div>
-    </li>
-    <li>
-      <div class="flex justify-between rounded-lg hover:bg-slate-300">
-        <div class="flex gap-4 p-1">
-          <img src="https://via.placeholder.com/50" alt="Imagen de procedimiento" />
-          <div class="flex flex-col justify-between">
-            <h4 class="font-semibold text-large text-text">Mastectomia</h4>
-            <p class="text-subtext text-sm">Fecha: 31/01/2024</p>
+        </li>
+        <li>
+          <div class="flex justify-between rounded-lg hover:bg-slate-300">
+            <div class="flex gap-4 p-1">
+              <img src="https://via.placeholder.com/50" alt="Imagen de procedimiento" />
+              <div class="flex flex-col justify-between">
+                <h4 class="font-semibold text-large text-text">Mastectomia</h4>
+                <p class="text-subtext text-sm">Fecha: 31/01/2024</p>
+              </div>
+            </div>
+            <span class="mr-10 flex justify-center items-center">
+              <svg class="hover:bg-slate-400 rounded-full" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 7h-6l4 5l-4 5h6l4 -5z" /></svg>
+            </span>  
           </div>
-        </div>
-        <span class="mr-10 flex justify-center items-center">
-          <svg class="hover:bg-slate-400 rounded-full" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M13 7h-6l4 5l-4 5h6l4 -5z" /></svg>
-        </span>  
-      </div>
-    </li>
-  </ul>
-
+        </li>
+      </ul>
+    </main>
+  </div>
+  <Footer />
 
 </LayoutProf>
