--- a/src/pages/profesional/procedure[id].astro
+++ b/src/pages/profesional/procedure[id].astro
@@ -1,117 +1,103 @@
 ---
-    export const prerender = false
     import LayoutProf from '../../layouts/LayoutProf.astro'
-    
+    import Header from '../../components/Header.astro';
+    import Footer from '../../components/Footer.astro';
+    import SideNav from '../../components/SideNav.astro';
+
+    let datosCookie;
+
+    if (Astro.cookies.has("userData")) {
+    const cookie = Astro.cookies.get("userData")
+        if(cookie){
+            datosCookie = JSON.parse(cookie.value);
+        }
+        
+    }
+    else{
+        return Astro.redirect('/login');
+    }
+
     import { data } from '../../data/procedures.ts'
 ---
 
 <LayoutProf title="Procedimientos Medicos">
-    <h1 class="text-2xl font-bold mb-4 text-header">Procedimientos</h1>
-    <h3 class="text-xl font-bold mb-3 text-text">Filtrado</h3>
+    <Header estado={datosCookie.type}/>
+    <div class="flex gap-3 min-h-screen">
+        <SideNav nombre={datosCookie.name} estado={datosCookie.type.charAt(0).toUpperCase() + datosCookie.type.slice(1)} userid={datosCookie.userid}/>
+        <main class="w-full mt-3 mx-2">
+            <h1 class="text-2xl font-bold mb-4 text-header">Procedimientos</h1>
+            <h3 class="text-xl font-bold mb-3 text-text">Filtrado</h3>
 
-    <div>
-        <span class="filterCabeza cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Cabeza y Cuello
-        </span>
+            <div>
+                <span class="filterCabeza cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Cabeza y Cuello
+                </span>
 
-        <span class="filterTorso cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Torso
-        </span>
+                <span class="filterTorso cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Torso
+                </span>
 
-        <span class="filterSuperior cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Extremidades Superiores
-        </span>
+                <span class="filterSuperior cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Extremidades Superiores
+                </span>
 
-        <span class="filterInferior cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Extremidades Inferiores
-        </span>
+                <span class="filterInferior cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Extremidades Inferiores
+                </span>
 
-        <span class="filterInterno cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Órganos Internos
-        </span>
+                <span class="filterInterno cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Órganos Internos
+                </span>
 
-        <span class="filterBasico cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Procedimientos Básicos
-        </span>
+                <span class="filterBasico cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Procedimientos Básicos
+                </span>
 
-        <span class="filterOthers cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Otros
-        </span>
-        <span class="filterDelete cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
-            px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
-        >
-            Quitar Filtros
-        </span>
+                <span class="filterOthers cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Otros
+                </span>
+                <span class="filterDelete cursor-pointer bg-gray-200 text-text text-xs font-medium me-2
+                    px-2.5 py-0.5 rounded-full dark:bg-gray-700 dark:text-gray-300 hover:bg-gray-300"
+                >
+                    Quitar Filtros
+                </span>
 
+            </div>
+
+            <ul id="procedures" class="mt-3 border-t-2 border-gray-300" >
+                {data.map((procedure) => (
+                    <li class={`${procedure.tipo} procedimiento`}>
+                        <a href={`/procedures/${procedure.nombre}`} class="flex items-center justify-between border-b-2 border-gray-300 p-2 hover:bg-gray-200">
+                            <div class="flex gap-2">
+                                <img src="/procedure.webp" alt="Imagen del procedimiento" class="h-14" />
+                                <div>
+                                    <p class="text-large hover:underline text-text font-bold"> {procedure.nombre} </p>
+                                    <p class="text-subtext text-sm"> {procedure.descripcion} </p>    
+                                </div>
+                            </div>
+                        <svg class="cursor-pointer" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 3a3 3 0 0 1 2.995 2.824l.005 .176v12a3 3 0 0 1 -2.824 2.995l-.176 .005h-12a3 3 0 0 1 -2.995 -2.824l-.005 -.176v-12a3 3 0 0 1 2.824 -2.995l.176 -.005h12zm0 2h-9v14h9a1 1 0 0 0 .993 -.883l.007 -.117v-12a1 1 0 0 0 -.883 -.993l-.117 -.007zm-4.387 4.21l.094 .083l2 2a1 1 0 0 1 .083 1.32l-.083 .094l-2 2a1 1 0 0 1 -1.497 -1.32l.083 -.094l1.292 -1.293l-1.292 -1.293a1 1 0 0 1 -.083 -1.32l.083 -.094a1 1 0 0 1 1.32 -.083z" stroke-width="0" fill="currentColor" /></svg>
+                        </a>
+                    </li>
+                ))}
+            </ul>
+        </main>
     </div>
 
-    <ul id="procedures" class="mt-3 border-t-2 border-gray-300">
-        {data.map((procedure) => (
-            <li class={`${procedure.tipo} procedimiento`}>
-                <a href={`/procedures/${procedure.nombre}`} class="flex items-center justify-between border-b-2 border-gray-300 p-2 hover:bg-gray-200">
-                    <div class="flex gap-2">
-                        <img src="/procedure.webp" alt="Imagen del procedimiento" class="h-14" />
-                        <div>
-                            <p class="text-large hover:underline text-text font-bold"> {procedure.nombre} </p>
-                            <p class="text-subtext text-sm"> {procedure.descripcion} </p>    
-                        </div>
-                    </div>
-                <svg class="cursor-pointer" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 3a3 3 0 0 1 2.995 2.824l.005 .176v12a3 3 0 0 1 -2.824 2.995l-.176 .005h-12a3 3 0 0 1 -2.995 -2.824l-.005 -.176v-12a3 3 0 0 1 2.824 -2.995l.176 -.005h12zm0 2h-9v14h9a1 1 0 0 0 .993 -.883l.007 -.117v-12a1 1 0 0 0 -.883 -.993l-.117 -.007zm-4.387 4.21l.094 .083l2 2a1 1 0 0 1 .083 1.32l-.083 .094l-2 2a1 1 0 0 1 -1.497 -1.32l.083 -.094l1.292 -1.293l-1.292 -1.293a1 1 0 0 1 -.083 -1.32l.083 -.094a1 1 0 0 1 1.32 -.083z" stroke-width="0" fill="currentColor" /></svg>
-                </a>
-            </li>
-        ))}
-    </ul>
+    
 </LayoutProf>
 
-<script>
-   
-    const filter = (tipo: string) => {
-        const elements = document.querySelectorAll(".procedimiento");     
-        elements.forEach((element) => {
-            if(element.classList.contains(tipo)){
-                (element as HTMLLIElement).style.display = "block";
-            }
-            else{
-                (element as HTMLLIElement).style.display = "none";
-            }
-        })
-    }
 
-    const filterCabeza = document.querySelector(".filterCabeza") as HTMLSpanElement
-    const filterTorso = document.querySelector(".filterTorso") as HTMLSpanElement
-    const filterSuperior = document.querySelector(".filterSuperior") as HTMLSpanElement
-    const filterInferior = document.querySelector(".filterInferior") as HTMLSpanElement
-    const filterInterno = document.querySelector(".filterInterno") as HTMLSpanElement
-    const filterBasico = document.querySelector(".filterBasico") as HTMLSpanElement
-    const filterOthers = document.querySelector(".filterOthers") as HTMLSpanElement
-    const filterDelete = document.querySelector(".filterDelete") as HTMLSpanElement
-    
-    filterCabeza.addEventListener("click", () => filter("Cabeza"))
-    filterTorso.addEventListener("click", () => filter("Torso"))
-    filterSuperior.addEventListener("click", () => filter("Superiores"))
-    filterInferior.addEventListener("click", () => filter("Inferiores"))
-    filterInterno.addEventListener("click", () => filter("Internos"))
-    filterBasico.addEventListener("click", () => filter("Basicos"))
-    filterOthers.addEventListener("click", () => filter("Otros"))
-    filterDelete.addEventListener("click", () => {
-        const elements = document.querySelectorAll(".procedimiento");     
-        elements.forEach((element) => {
-            (element as HTMLLIElement).style.display = "block";
-        })
-    })
-
-</script>
