--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -23,7 +23,7 @@
     <div>
       <h1 >404</h1>
       <p >Pagina no encontrada</p>
-      <a href="/">Volver</a>
+      <a href=`/dashboard${datosCookie.userid}`>Volver</a>
     </div>
   <Footer />
 </Layout>
