--- a/src/pages/profesional/procedure[id].astro
+++ b/src/pages/profesional/procedure[id].astro
@@ -23,7 +23,7 @@
 <LayoutProf title="Procedimientos Medicos">
     <Header estado={datosCookie.type}/>
     <div class="flex gap-3 min-h-screen">
-        <SideNav nombre={datosCookie.name} estado={datosCookie.type.charAt(0).toUpperCase() + datosCookie.type.slice(1)} userid={datosCookie.userid}/>
+        <SideNav nombre={datosCookie.name} estado={datosCookie.type} userid={datosCookie.userid}/>
         <main class="w-full mt-3 mx-2">
             <h1 class="text-2xl font-bold mb-4 text-header">Procedimientos</h1>
             <h3 class="text-xl font-bold mb-3 text-text">Filtrado</h3>
@@ -97,7 +97,7 @@
         </main>
     </div>
 
-    
+    <Footer />
 </LayoutProf>
 
 
