added procedure page

--- a/src/pages/dashboard[id].astro
+++ b/src/pages/dashboard[id].astro
@@ -24,7 +24,7 @@ else{
 
   <Header estado={datosCookie.type}/>
 		<div class="flex gap-3 min-h-screen">
-			<SideNav nombre={datosCookie.name} estado={datosCookie.type}/>
+			<SideNav nombre={datosCookie.name} estado={datosCookie.type} userid={datosCookie.userid}/>
 			<main class="w-full mt-3 mx-2">
         <h1 class="text-2xl font-bold mb-4">Dashboard</h1>
         <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-x-2 gap-y-2 lg:gap-x-5 lg:gap-y-5">
