--- a/src/layouts/LayoutProf.astro
+++ b/src/layouts/LayoutProf.astro
@@ -14,67 +14,16 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/cardboards.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title> 
+		<title>{title}</title>
 		<ViewTransitions />
 	</head>
 	
 	<body class=" bg-gray-50 font-roboto" transition:persist="">
 		<slot/>	
-		
 	</body>
 
-	<script >
-    
-		const filter = (tipo:string, elements:NodeListOf<HTMLLIElement>) => {     
-				elements.forEach((element:HTMLLIElement) => {
-						if(element.classList.contains(tipo)){
-								(element).style.display = "block";
-						}
-						else{
-								(element).style.display = "none";
-						}
-				})
-		}
-
-		const filterCabeza = document.querySelector(".filterCabeza")
-		const filterTorso = document.querySelector(".filterTorso")
-		const filterSuperior = document.querySelector(".filterSuperior")
-		const filterInferior = document.querySelector(".filterInferior")
-		const filterInterno = document.querySelector(".filterInterno")
-		const filterBasico = document.querySelector(".filterBasico")
-		const filterOthers = document.querySelector(".filterOthers")
-		const filterDelete = document.querySelector(".filterDelete")
-		
-		filterCabeza?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Cabeza", elements)})
-		filterTorso?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Torso", elements)})
-		filterSuperior?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Superiores", elements)})
-		filterInferior?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Inferiores", elements)})
-		filterInterno?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Internos", elements)})
-		filterBasico?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Basicos", elements)})
-		filterOthers?.addEventListener("click", () => {
-			const elements = document.querySelectorAll(".procedimiento") as NodeListOf<HTMLLIElement>;
-			filter("Otros", elements)})
-		filterDelete?.addEventListener("click", () => {
-				const elements = document.querySelectorAll(".procedimiento");     
-				elements.forEach((element) => {
-						(element as HTMLLIElement).style.display = "block";
-				})
-		})
-
-	</script>	
-
+	<slot name="script"/>
+	
 </html>
 
 
