--- a/src/pages/procedures/results[id].astro
+++ b/src/pages/procedures/results[id].astro
@@ -18,16 +18,25 @@ else{
     return Astro.redirect('/login');
 }
 
+const { id } = Astro.params;
 
-import { data } from '../../data/procedures.ts'
-
-
-const { name } = Astro.params;
-
-const procedure = data.find( procedure => procedure.nombre === name );
+const procedure = await fetch(`https://medisimback-production.up.railway.app/getProcedure/${id}`)
+.then(response => {
+    if (response.ok) {
+        return response.json();
+    } else {
+        console.error('Error al obtener el procedimiento');
+        console.log(response.text());
+        return null;
+    }
+})
+.catch(error => {
+    console.error('Error al obtener el procedimiento:', error);
+    return null;
+})
 
 if(!procedure){
-    return Astro.redirect('/404');
+    // return Astro.redirect('/404');
 }
 
 ---
@@ -38,27 +47,18 @@ if(!procedure){
   <div class="flex gap-3 min-h-screen">
       <SideNav nombre={datosCookie.name} estado={datosCookie.type} userid={datosCookie.userid}/>
       <main class="w-full mt-3 mx-2" data-nombre={procedure.nombre} data-userid={datosCookie.userid}>
-        <h1 class="text-2xl font-bold text-text mb-5" >Procedimiento: {procedure.nombre}</h1>
+        <h1 class="text-2xl font-bold text-text mb-5" >Procedimiento: {procedure.procedurename}</h1>
         <section class="grid grid-cols-2 w-full">
             <div class="flex flex-col items-start justify-start gap-4">
-                <p class="text-subtext"><span class="font-bold text-text opacity-90">Descripción: </span> {procedure.descripcion}</p>
-                <p class="text-subtext">Para realizar este procedimiento es necesario:</p>
-                    <ul class="list-decimal list-inside ml-5 text-subtext">
-                        <li>Gafas De Realidad Virtual</li>
-                        <li>Al menos una superficie alrededor de 2x2m</li>
-                        <li>Recomendado: tener nociones basicas de cirugia</li>
-                    </ul>
+                <p class="text-subtext"><span class="font-bold text-text opacity-90">Fecha: </span> {procedure.date}</p>
+
+                <p class="text-subtext"><span class="font-bold text-text opacity-90">Puntuacion Obtenida: </span> {procedure.score}</p>
+                <p class="text-subtext"><span class="font-bold text-text opacity-90">Numero errores: </span> {procedure.errors}</p>
+                <p class="text-subtext"><span class="font-bold text-text opacity-90">Tiempo total: </span> {procedure.time}</p>
                 
-                <p class="text-subtext">Tiempo aproximado: 50mins</p>
-                </ul>
             </div>
             <img src="/Uso.webp" alt="Imagen del procedimiento" class="h-3/4" />
         </section>  
-
-
-        <div class="flex justify-center items-center mt-5">
-            <button type="button" id="buttonProcedure" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Comenzar</button>
-        </div> 
     </main>
     </div>
 
@@ -75,6 +75,7 @@ if(!procedure){
 
 
         const onClickButton = () => {
+            console.log('Comenzar procedimiento');
             //Crear valores random para: tiempo, puntaje, errores
             const time = Math.floor(Math.random() * 20) + 40;
             const randomNumber = Math.floor(Math.random() * 100) + 1;
@@ -103,7 +104,7 @@ if(!procedure){
             }
 
             //Hacer llamada a la API
-            fetch('https://medisimback-production.up.railway.app/createProcedure', {
+            fetch('http://localhost:8080/createProcedure', {
                 method: 'POST',
                 headers: {
                 'Content-Type': 'application/json' // Indicar que el cuerpo de la solicitud es JSON
