--- a/src/pages/scholars/aula[id].astro
+++ b/src/pages/scholars/aula[id].astro
@@ -17,15 +17,7 @@
         return Astro.redirect('/login');
     }
 
-    const response = await fetch("https://medisimback-production.up.railway.app/getClasses", {
-        method: "POST",
-        headers: {
-            "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-            userid: datosCookie.userid,
-        }),
-    })
+    const response = await fetch(`https://medisimback-production.up.railway.app/getClasses/${datosCookie.userid}`)
     const classes = await response.json();
 
 ---
