--- a/src/pages/profesional/procedure[id].astro
+++ b/src/pages/profesional/procedure[id].astro
@@ -99,54 +99,55 @@
 
     <Footer />
 
-    <script slot="script" type="text/javascript">
-        const filter = (tipo, elements) => {     
-            elements.forEach((element) => {
-                if(element.classList.contains(tipo)){
-                    (element).style.display = "block";
-                }
-                else{
-                    (element).style.display = "none";
-                }
-            })
-        }
-        const filterCabeza = document.querySelector(".filterCabeza")
-        const filterTorso = document.querySelector(".filterTorso")
-        const filterSuperior = document.querySelector(".filterSuperior")
-        const filterInferior = document.querySelector(".filterInferior")
-        const filterInterno = document.querySelector(".filterInterno")
-        const filterBasico = document.querySelector(".filterBasico")
-        const filterOthers = document.querySelector(".filterOthers")
-        const filterDelete = document.querySelector(".filterDelete")
-
-        filterCabeza.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Cabeza", elements)})
-        filterTorso.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Torso", elements)})
-        filterSuperior.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Superiores", elements)})
-        filterInferior.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Inferiores", elements)})
-        filterInterno.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Internos", elements)})
-        filterBasico.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Basicos", elements)})
-        filterOthers.addEventListener("click", () => {
-            const elements = document.querySelectorAll(".procedimiento");
-            filter("Otros", elements)})
-        filterDelete.addEventListener("click", () => {
-                const elements = document.querySelectorAll(".procedimiento");     
+    <script slot="script">
+        document.addEventListener('astro:page-load', () => {
+            const filter = (tipo, elements) => {     
                 elements.forEach((element) => {
-                    element.style.display = "block";
+                    if(element.classList.contains(tipo)){
+                        (element).style.display = "block";
+                    }
+                    else{
+                        (element).style.display = "none";
+                    }
                 })
-        })
+            }
+            const filterCabeza = document.querySelector(".filterCabeza")
+            const filterTorso = document.querySelector(".filterTorso")
+            const filterSuperior = document.querySelector(".filterSuperior")
+            const filterInferior = document.querySelector(".filterInferior")
+            const filterInterno = document.querySelector(".filterInterno")
+            const filterBasico = document.querySelector(".filterBasico")
+            const filterOthers = document.querySelector(".filterOthers")
+            const filterDelete = document.querySelector(".filterDelete")
 
+            filterCabeza.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Cabeza", elements)})
+            filterTorso.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Torso", elements)})
+            filterSuperior.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Superiores", elements)})
+            filterInferior.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Inferiores", elements)})
+            filterInterno.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Internos", elements)})
+            filterBasico.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Basicos", elements)})
+            filterOthers.addEventListener("click", () => {
+                const elements = document.querySelectorAll(".procedimiento");
+                filter("Otros", elements)})
+            filterDelete.addEventListener("click", () => {
+                    const elements = document.querySelectorAll(".procedimiento");     
+                    elements.forEach((element) => {
+                        element.style.display = "block";
+                    })
+            })
+        });
     </script>	
 </LayoutProf>
 
